[package]
name = "system_health"
version = "0.1.0"
edition = "2024"
authors = [" JU-NINE NGU CHO <chojuninengu@gmail.com>"]
description = "A command-line tool to display system health information including battery status, RAM usage, and system resources"
repository = "https://github.com/chojuninengu/system_health"
license = "MIT"
keywords = ["system", "health", "battery", "monitoring", "cli"]
categories = ["command-line-utilities", "development-tools", "hardware-support"]

[dependencies]
sysinfo = "0.23.5"
battery = "0.7.8"